fixed quote alignment, using pygments

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ footer div {
   float: left;
   margin-left: 1em;
   font-style: italic;
-  margin-top: 1.5em;
+  margin-top: 1.45em;
 }
 
 footer ul {
